# bevy_immediate

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: examples.yml  rust.yml
crates/bevy_immediate_attach/: Cargo.toml  README.md
crates/bevy_immediate_attach/src/: lib.rs
crates/bevy_immediate_core/: Cargo.toml
crates/bevy_immediate_core/src/: lib.rs  utils.rs
crates/bevy_immediate_core/src/capabilities/: access_requests.rs  mod.rs  system_param.rs
crates/bevy_immediate_core/src/capabilities/system_param/: system_param_impl.rs
crates/bevy_immediate_core/src/immediate/: cached_hash.rs  entity_mapping.rs  id.rs  mod.rs  upkeep.rs
crates/bevy_immediate_floating_ui/: Cargo.toml
crates/bevy_immediate_floating_ui/src/: anchored_ui_plugin.rs  floating_window_plugin.rs  lib.rs  tooltip_plugin.rs
crates/bevy_immediate_ui/: Cargo.toml
crates/bevy_immediate_ui/src/: activated.rs  anchored.rs  base.rs  button_variant.rs  checked.rs  clicked.rs  color_plane.rs  color_swatch.rs  disabled.rs  interaction.rs  layout_order.rs  lib.rs  look.rs  number_input.rs  selected.rs  slider_base_color.rs  slider_value.rs  text.rs  text_input.rs  track_value_change_plugin.rs
examples/: anchored.rs  basic.rs  bevy_inbuilt_ui.rs  bevy_scrollarea.rs  bevy_widgets.rs  demo.rs  extension.rs  extension_use.rs  feathers_gallery.rs  floating_window.rs  hello_world.rs  hot_patching.rs  independent_root.rs  main_menu.rs  menu.rs  plain_ui.rs  power_user.rs  styles.rs  text_edit.rs  tooltip.rs  utils.rs  widget_functional.rs  widget_native.rs  widget_use.rs  widget_use_preview.rs
src/: lib.rs  utils.rs
src/attach/: mod.rs
src/capabilities/: access_requests.rs  mod.rs  system_param.rs
src/capabilities/system_param/: system_param_impl.rs
src/immediate/: cached_hash.rs  ctx.rs  entity_mapping.rs  hotpatching.rs  id.rs  id_mapping.rs  immctx.rs  immid.rs  mod.rs  system_set.rs  upkeep.rs
src/immediate/capabilities/: mod.rs
src/ui/: activated.rs  anchored.rs  anchored_entity_plugin.rs  anchored_ui_plugin.rs  button_variant.rs  checked.rs  clicked.rs  disabled.rs  floating_entity_focus_plugin.rs  floating_entity_plugin.rs  floating_ui_focus_plugin.rs  floating_ui_ordering_plugin.rs  floating_window_plugin.rs  interaction.rs  layout_order.rs  look.rs  mod.rs  picking.rs  radio_button_fix_plugin.rs  selected.rs  slider_base_color.rs  slider_value.rs  text.rs  tooltip_plugin.rs  track_value_change_plugin.rs  ui_base.rs  ui_children_order.rs  ui_look.rs  utils.rs
src/ui/picking/: clicked.rs
