[package]
name = "bevy_immediate"
version = "0.3.0"
edition = "2024"
authors = ["Pēteris Pakalns"]
repository = "https://github.com/PPakalns/bevy_immediate/"
homepage = "https://github.com/PPakalns/bevy_immediate/"
description = "A simple, fast, and modular immediate mode UI library for Bevy"
keywords = ["bevy", "ui", "immediate", "simple", "ecs"]
categories = ["gui", "graphics", "game-development"]
license = "MIT"
rust-version = "1.88"
exclude = ["/.github"]
autoexamples = false

[dependencies]
bevy_ecs = { version = "0.17.2", default-features = false }
bevy_app = { version = "0.17.2", default-features = false }
bevy_platform = { version = "0.17.2", default-features = false }
bevy_derive = { version = "0.17.2", default-features = false }
bevy_internal = { version = "0.17.2", default-features = false }

bevy_math = { version = "0.17.2", default-features = false, optional = true }
bevy_window = { version = "0.17.2", default-features = false, optional = true }
bevy_ui = { version = "0.17.2", default-features = false, optional = true }
bevy_transform = { version = "0.17.2", default-features = false, optional = true }
bevy_picking = { version = "0.17.2", default-features = false, optional = true }
bevy_color = { version = "0.17.2", default-features = false, optional = true }
bevy_input = { version = "0.17.2", default-features = false, optional = true }
bevy_input_focus = { version = "0.17.2", default-features = false, optional = true }
bevy_ui_widgets = { version = "0.17.2", default-features = false, optional = true }
bevy_feathers = { version = "0.17.2", default-features = false, optional = true }
bevy_time = { version = "0.17.2", default-features = false, optional = true }

log = "0.4.28"
ahash = "0.8.12"
type-map = "0.5.1"
paste = "1.0.15"
rand = { version = "0.9.2", default-features = false, features = [
  "thread_rng",
] }

[features]
default = ["ui", "bevy_ui_widgets", "bevy_feathers"]

hotpatching = ["bevy_ecs/hotpatching"]

ui = [
  "dep:bevy_ui",
  "dep:bevy_time",
  "dep:bevy_color",
  "dep:bevy_input",
  "dep:bevy_picking",
  "dep:bevy_input_focus",
  "dep:bevy_transform",
  "dep:bevy_math",
  "dep:bevy_window",
  "bevy_internal/bevy_picking",
  "bevy_internal/bevy_input_focus",
  "bevy_internal/bevy_ui_picking_backend",
]
bevy_feathers = ["bevy_ui_widgets", "dep:bevy_feathers", "dep:bevy_color"]
bevy_ui_widgets = ["ui", "dep:bevy_ui_widgets"]

[dev-dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
  "bevy_ui",
  "bevy_ui_debug",
  "bevy_ui_render",
  "bevy_log",
  "bevy_window",
  "bevy_winit",
  "webgl2",
  "x11",
  "wayland",
  "bevy_text",
  "bevy_input_focus",
  "default_font",
  "bevy_picking",
  "ghost_nodes",

  # UI widgets
  "experimental_bevy_ui_widgets",
  "experimental_bevy_feathers",
] }
itertools = "0.14"
strum = { version = "0.27.2", features = ["derive"] }
# bevy_framepace = "0.20"

[[example]]
name = "demo"

[profile.dev.package."*"]
opt-level = 2

[profile.web-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.bevy_cli.web.release]
# Enable wasm-opt with custom flags
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[patch.crates-io]

# Not yet released
# bevy_framepace = { git = "https://github.com/aevyrie/bevy_framepace.git", rev = "ea62830" }


# bevy = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_ui = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_platform = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_picking = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_derive = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_color = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_internal = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_input = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_input_focus = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_ui_widgets = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_feathers = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
