[package]
name = "bevy_immediate"
version = "0.4.0"
edition = "2024"
authors = ["Pēteris Pakalns"]
repository = "https://github.com/PPakalns/bevy_immediate/"
homepage = "https://github.com/PPakalns/bevy_immediate/"
description = "A simple, fast, and modular immediate mode UI library for Bevy"
keywords = ["bevy", "ui", "immediate", "simple", "ecs"]
categories = ["gui", "graphics", "game-development"]
license = "MIT"
rust-version = "1.89"
exclude = ["/.github"]
autoexamples = false

[workspace]
members = [
  "./crates/bevy_immediate_core/",
  "./crates/bevy_immediate_attach/",
  "./crates/bevy_immediate_floating_ui/",
  "./crates/bevy_immediate_ui/",
]

[workspace.dependencies]
bevy_ecs = { version = "0.18.0", default-features = false }
bevy_app = { version = "0.18.0", default-features = false }
bevy_platform = { version = "0.18.0", default-features = false }
bevy_derive = { version = "0.18.0", default-features = false }
bevy_internal = { version = "0.18.0", default-features = false }

bevy_math = { version = "0.18.0", default-features = false }
bevy_window = { version = "0.18.0", default-features = false }
bevy_ui = { version = "0.18.0", default-features = false }
bevy_text = { version = "0.18.0", default-features = false }
bevy_transform = { version = "0.18.0", default-features = false }
bevy_picking = { version = "0.18.0", default-features = false }
bevy_color = { version = "0.18.0", default-features = false }
bevy_input = { version = "0.18.0", default-features = false }
bevy_input_focus = { version = "0.18.0", default-features = false }
bevy_ui_widgets = { version = "0.18.0", default-features = false }
bevy_feathers = { version = "0.18.0", default-features = false }
bevy_time = { version = "0.18.0", default-features = false }

log = "0.4.28"
ahash = "0.8.12"
type-map = "0.5.1"
paste = "1.0.15"
rand = { version = "0.9.2", features = [
  "thread_rng",
], default-features = false }

bevy_immediate_core = { version = "0.4.0", path = "./crates/bevy_immediate_core/" }
bevy_immediate_attach = { version = "0.4.0", path = "./crates/bevy_immediate_attach/" }
bevy_immediate_floating_ui = { version = "0.4.0", path = "./crates/bevy_immediate_floating_ui/" }
bevy_immediate_ui = { version = "0.4.0", path = "./crates/bevy_immediate_ui/" }

[dependencies]
bevy_immediate_core = { workspace = true }
bevy_immediate_attach = { workspace = true }
bevy_immediate_ui = { workspace = true, optional = true }

[features]
default = ["ui", "bevy_ui_widgets", "bevy_feathers"]

hotpatching = ["bevy_immediate_core/hotpatching"]

ui = ["dep:bevy_immediate_ui"]
bevy_ui_widgets = ["ui", "bevy_immediate_ui/bevy_ui_widgets"]
bevy_feathers = ["bevy_ui_widgets", "bevy_immediate_ui/bevy_feathers"]

[dev-dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
  "bevy_ui",
  "bevy_ui_debug",
  "bevy_ui_render",
  "bevy_log",
  "bevy_window",
  "bevy_winit",
  "webgl2",
  "x11",
  "wayland",
  "bevy_text",
  "bevy_input_focus",
  "default_font",
  "bevy_picking",
  "ghost_nodes",

  # UI widgets
  "experimental_bevy_ui_widgets",
  "experimental_bevy_feathers",
] }
itertools = "0.14"
strum = { version = "0.27.2", features = ["derive"] }

# bevy_ui_text_input = "0.6.0-rc.2" # Patched in patch.crates-io
# bevy_ui_text_input = { git = "https://github.com/PPakalns/bevy_ui_text_input.git", rev = "8df21f0d4588fd27c8c888f685cc3ec7db8eab6a" }
# cosmic-text = { version = "0.15.0", default-features = false }

bevy_framepace = "0.20"

[[example]]
name = "demo"

[profile.dev.package."*"]
opt-level = 2

[profile.web-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.bevy_cli.web.release]
# Enable wasm-opt with custom flags
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[patch.crates-io]

# bevy = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_ui = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_platform = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_picking = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_derive = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_color = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_internal = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_input = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_input_focus = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_ui_widgets = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
# bevy_feathers = { git = "https://github.com/bevyengine/bevy", rev = "c822005" }
