[package]
name = "bevy_immediate_core"
version = "0.8.0"

edition = "2024"
authors = ["Pēteris Pakalns"]
repository = "https://github.com/PPakalns/bevy_immediate/"
homepage = "https://github.com/PPakalns/bevy_immediate/"
description = "A simple, fast, and modular immediate mode UI library for Bevy"
keywords = ["bevy", "ui", "immediate", "simple", "ecs"]
categories = ["gui", "graphics", "game-development"]
license = "MIT"
exclude = ["/.github"]

[dependencies]
bevy_ecs = { workspace = true }
bevy_platform = { workspace = true }
bevy_app = { workspace = true }
bevy_derive = { workspace = true }
bevy_scene = { workspace = true, optional = true }

type-map = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
stackbox_2 = { workspace = true }

[features]
deault = []
hotpatching = ["bevy_ecs/hotpatching"]
bevy_scene = ["dep:bevy_scene"]
