[package]
name = "bevy_immediate_ui"
version = "0.4.0"

edition = "2024"
authors = ["Pēteris Pakalns"]
repository = "https://github.com/PPakalns/bevy_immediate/"
homepage = "https://github.com/PPakalns/bevy_immediate/"
description = "A simple, fast, and modular immediate mode UI library for Bevy"
keywords = ["bevy", "ui", "immediate", "simple", "ecs"]
categories = ["gui", "graphics", "game-development"]
license = "MIT"
exclude = ["/.github"]

[dependencies]
bevy_ui = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_picking = { workspace = true }
bevy_input = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_platform = { workspace = true }
bevy_text = { workspace = true }

bevy_immediate_core = { workspace = true }
bevy_immediate_floating_ui = { workspace = true }

bevy_color = { workspace = true, optional = true }
bevy_ui_widgets = { workspace = true, optional = true }
bevy_feathers = { workspace = true, optional = true }


[features]
default = []
bevy_ui_widgets = ["dep:bevy_ui_widgets", "dep:bevy_color"]
bevy_feathers = [
  "bevy_ui_widgets",
  "dep:bevy_feathers",
  "bevy_immediate_floating_ui/bevy_feathers",
]
